# Q3-C1-Finite-Elements

./: CMakeLists.txt  Makefile  README.md
examples/: test.cpp  test_1d.cpp  test_1d.nb  test_1d.txt
examples/legacy/: test_2d.cpp
include/: q3c1
include/q3c1_bits/: basis_func.hpp  cell.hpp  dimension_1d.hpp  general.hpp  grid.hpp  idx_set.hpp  vertex.hpp
src/: basis_func.cpp  cell.cpp  dimension_1d.cpp  general.cpp  grid.cpp  idx_set.cpp  vertex.cpp
